# udata-event-orchestration

./: .env.analysis.example  .env.datalake.example  .env.hydra.example  .gitignore  .gitmodules  Dockerfile.analysis.consumer  Dockerfile.analysis.worker  Dockerfile.datalake.consumer  Dockerfile.datalake.worker  Dockerfile.hydra.consumer  Dockerfile.hydra.crawler  README.md  Untitled.ipynb  docker-compose-console.yml  docker-compose-services.yml  docker-compose-shared.yml  docker-compose-with-pypi.yml  docker-compose-with-source.yml  docker-compose.yml  get_catalog.sh  get_source.sh  hydra.sh  init.sh  messages.json  pyproject.toml  requirements.txt  setup.py  short.csv  simulatedResourceEvent.py
analysis/dockerfiles/: Dockerfile.analysis.with.source
config/: .env.analysis.example  .env.hydra.example
csvapi/: .env.csvapi.example
dockerfiles/analysis/: Dockerfile.analysis.with.pypi  Dockerfile.analysis.with.source
dockerfiles/csvapi/: Dockerfile.csvapi.with.pypi  Dockerfile.csvapi.with.source
dockerfiles/hydra/: Dockerfile.hydra.postgres  Dockerfile.hydra.with.source
hydra/: init-hydra-postgres.sql
hydra/dockerfiles/: Dockerfile.hydra.postgres  Dockerfile.hydra.with.pypi
testing/: messages.json  requirements.txt  setup.py
testing/udata_kafka_event_testing/: __init__.py  cli.py
tests/: conftest.py  test_messages.py
udata_event_orchestration/: cli.py  simulatedResourceEvent.py
